--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ background-size: 100%;
 
 .navbar {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
